# property-price-tracker

./: .env.example  .gitignore  Cargo.toml  README.md
entities/: Cargo.toml
entities/src/: lib.rs  price_snapshot.rs  property_listing.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260108_201259_create_property_listing.rs  m20260108_201538_create_price_snapshot.rs
src/: app.rs  config.rs  cors.rs  db.rs  handlers.rs  in_models.rs  main.rs  out_models.rs  repositories.rs  router.rs
src/app/: bootstrap.rs  logging.rs  middleware.rs  state.rs
src/handlers/: handler_setup.rs  property_handler.rs
src/in_models/: README.md  property_input.rs
src/out_models/: property_response.rs
src/repositories/: property_repository.rs
