[package]
name = "property-price-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
entities = { path = "./entities" }

anyhow = "1.0.98"

axum = { version = "0.8.8", features = ["macros"] }

dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sea-orm = "1.1.19"
sea-orm-macros = "1.1.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

tower-http = { version = "0.6.6", features = [
  "trace",
  "set-header",
  "timeout",
  "limit",
  "cors",
] }